--- a/src/system/RecentAppsBar/components/RecentAppsBar.css
+++ b/src/system/RecentAppsBar/components/RecentAppsBar.css
@@ -1,6 +1,4 @@
 .recent-bar {
-    /* display: flex;
-    position: fixed; */
     bottom: 0;
     left: 0;
     right: 0;
@@ -65,6 +63,6 @@
 }
 @media (orientation: landscape) and (min-width:1500px) {
     .recent-bar {
-        font-size: 34px;
+        font-size: 28px;
     }
 }
