--- a/src/user/Calculator/components/Calculator.css
+++ b/src/user/Calculator/components/Calculator.css
@@ -5,5 +5,5 @@
     align-items: center;
     height: 100%;
     background-color: black;
-    animation: scale-up 0.3s ease-out forwards;
+    animation: scale-up 0.2s ease-out forwards;
 }
