--- a/src/user/Notes/components/Notes.css
+++ b/src/user/Notes/components/Notes.css
@@ -8,7 +8,7 @@
 }
 
 .cards-container {
-    animation: come-up 0.3s ease-in-out forwards;
+    animation: come-up 0.2s ease-out forwards;
     margin-top: 1rem;
     max-width: 100vw;
     display: flex;
